Day4/terraform/create-ec2-instance/imports.tf
import {
  to = aws_vpc.tektutor_vpc
  id = "vpc-01283c5309e964b8c"
}

resource "aws_vpc" "tektutor_vpc" {
}
